# collabia

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: 3xlite.yaml  default.yaml  hetero.yaml
collabia/: config.py  main.py  pricing.py  utils.py
collabia/agents/: base.py  claude.py  gemini.py  gemini_flash.py  gemini_lite.py  generic_gemini.py  loader.py  mistral.py
collabia/consensus/: loop.py  voting.py
collabia/display/: terminal.py
collabia/prompts/: analyzer.py  critic.py  responder.py
tests/: runs.md
tests/results/: 2026-03-19T00-15-46_hetero.json  2026-03-19T00-28-52_hetero.json  2026-03-19T00-33-24_hetero.json  2026-03-19T00-34-49_hetero.json  2026-03-19T00-36-20_hetero.json  2026-03-19T00-38-12_hetero.json  2026-03-19T00-40-09_hetero.json  2026-03-19T00-47-38_baseline_gemini-2.5-pro.json  2026-03-19T00-49-18_hetero.json  2026-03-19T00-51-37_baseline_gemini-2.5-pro.json  2026-03-19T00-52-56_hetero.json  2026-03-19T00-53-48_baseline_gemini-2.5-pro.json  2026-03-19T00-54-59_hetero.json  2026-03-19T00-55-45_baseline_gemini-2.5-pro.json  2026-03-19T00-57-05_hetero.json  2026-03-19T00-57-52_baseline_gemini-2.5-pro.json  2026-03-19T00-59-30_hetero.json  2026-03-19T01-00-18_baseline_gemini-2.5-pro.json  2026-03-19T01-01-58_hetero.json
